manifests/api-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: default
spec:
  selector:
    app: api-gateway
  type: ClusterIP
  ports:
  - name: api-gateway
    protocol: TCP
    port: 80
    targetPort: 3000
